--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="pt-BR">
   <head>
-    <meta charset="UTF-8" />
-    <title>Exemplo CI/CD com React + Vite</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+  <meta charset="UTF-8" />
+  <title>Pipeline CI/CD com React + Vite</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    name="description"
+    content="Exemplo de pipeline CI/CD com React, Vite e GitHub Actions, incluindo lint, testes, build e deploy automatizado no GitHub Pages."
+  />
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
